feat: creating community integrations page
